force-app/main/default/objects/AccountSalesDepositLedger__c/AccountSalesDepositLedger__c.object-meta.xml
<CustomObject>
    <description>売上と入金消込の元帳</description>
    <label>取引先元帳</label>
    <nameField>
        <displayFormat>ASD-{0000000000}</displayFormat>
        <label>取引先元帳#</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>