force-app/main/default/objects/AccountSalesDepositLedger__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>取引先</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>取引先元帳</relationshipLabel>
    <relationshipName>AccountSalesDepositLedgerList</relationshipName>
    <type>Lookup</type>
</CustomField>