force-app/main/default/objects/AccountSalesDepositLedger__c/fields/Balance_F__c.field-meta.xml
<CustomField>
    <fullName>Balance_F__c</fullName>
    <formula>IF (TEXT(Type__c) = &apos;Monthly&apos;, CarryoverAmount__c + SalesAmount__c - DepositAmount__c, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>残高</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>