force-app/main/default/objects/AccountSalesDepositLedger__c/fields/DepositWithdrawalDetail__c.field-meta.xml
<CustomField>
    <fullName>DepositWithdrawalDetail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>入出金明細</label>
    <referenceTo>DepositWithdrawalDetail__c</referenceTo>
    <relationshipLabel>取引先元帳</relationshipLabel>
    <relationshipName>AccountSalesDepositLedgerList</relationshipName>
    <type>Lookup</type>
</CustomField>