force-app/main/default/objects/AccountSalesDepositLedger__c/fields/InvoiceDocument__c.field-meta.xml
<CustomField>
    <fullName>InvoiceDocument__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>請求書</label>
    <referenceTo>InvoiceDocument__c</referenceTo>
    <relationshipLabel>取引先元帳</relationshipLabel>
    <relationshipName>AccountSalesDepositLedgerList</relationshipName>
    <type>Lookup</type>
</CustomField>