force-app/main/default/objects/AccountSalesDepositLedger__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <label>摘要</label>
    <length>255</length>
    <type>Text</type>
</CustomField>