force-app/main/default/objects/AccountSalesDepositLedger__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales</fullName>
                <label>売上</label>
            </value>
            <value>
                <fullName>Deposit</fullName>
                <label>受入</label>
            </value>
            <value>
                <fullName>Monthly</fullName>
                <label>月計</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>